# FYNiX

./: .gitignore  CMakeLists.txt  README.md  build cmd.txt  imgui.ini  morph_exporter.bpy
Projects/: test.fynx
Projects/Load_Project/: test.fynx
assets/: dancer.gltf  hand2.glb  running_guy.gltf
assets/heart/: heart.gltf
include/: Animation.h  Animator.h  Bone.h  Camera.h  GUI.h  Light.h  Mesh.h  Model.h  ParticleSystem.h  PhysicsEngine.h  SceneManager.h  Shader.h  ShaderManager.h  Texture.h  VertexBuffer.h  Window.h
include/BufferObjects/: ElementBuffer.h  VertexArray.h
include/glad/: glad.h
shaders/basic/: fragment.glsl  vertex.glsl
shaders/light/: fragment.glsl  vertex.glsl
shaders/model/: fragment.glsl  vertex.glsl
shaders/particles/: particles.frag  particles.vert
src/: Animation.cpp  Animator.cpp  Bone.cpp  Camera.cpp  ElementBuffer.cpp  GUIManager.cpp  Light.cpp  Mesh.cpp  Model.cpp  ParticleSystem.cpp  PhysicsEngine.cpp  SceneManager.cpp  Shader.cpp  ShaderManager.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp  glad.c  main.cpp
src/GUI/: GUIManager.cpp
src/imgui/: imgui_impl_opengl3.cpp
